# moha-maven

./: .claude_settings.json.example  .env.example  .gitignore  .maven_history  .mcp.json  AUTOCLAUDE_TASK.md  Dockerfile  POWERSHELL_USAGE.md  README.md  SETUP_POWERSHELL.md  STATUS.md  UPGRADE_TO_V2.md  activate-maven.ps1  app.py  bera_levels.py  check_balance.py  check_funding.py  diagnose-maven-install.ps1  docker-compose.integrated.yml  docker-compose.moha-bot.yml  docker-compose.yml  enable-utf8-powershell.ps1  install-maven-system-wide.ps1  maven  maven-banner.ps1  maven-banner.sh  maven-chat-v2.ps1  maven-chat.ps1  maven-mcp-wrapper.ps1  maven-prompt.txt  maven-standalone.ps1  maven.ps1  maven.sh  maven_agent.json  pyproject.toml  requirements.txt  setup-maven-cmd.ps1  setup-maven-command.ps1  setup.ps1  setup.sh  (+1 more)
.auto-claude-prompts/: 01_complete_maven_infrastructure.md  MCP_CONTEXT.md  README.md
.claude-plugin/: plugin.json
.claude-plugin/maven-suite/: .mcp.json  README.md  plugin.json
.moha/maven/: SESSION_2026-01-18_TRADING_MCP_FIX.md  TECHNICAL_README.md  TRADING_SETUP.md  (+6 more)
agents/: rlm-synthesizer.md
claude/: interactive.py  llm_client.py  maven_session.py
cli/: __init__.py  __main__.py  banner.py  main.py
commands/: decision.md  deploy.md
database/: connection.py  migrate.py
docs/: CLAUDE_CODE_SETUP.md  DEMO.md  MAVEN_AGENT_USAGE.md  MAVEN_INDEPENDENCE.md  MAVEN_SETUP.md  PERSISTENCE_STRATEGY.md
maven_mcp/: config.py  rlm.py  server.py  tools.py
mcp/: README.md  __init__.py  resources.py  tools.py
utils/: moha_backend_client.py
(+150 files in other folders)
