[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moha-maven"
version = "1.0.0"
description = "Maven - CFO of Mother Haven, HBIC of Treasury"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Maven", email = "maven@motherhaven.app"}
]
keywords = ["maven", "motherhaven", "treasury", "cfo", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "Flask>=3.0.0",
    "flask-cors>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "mcp>=0.9.0",
    "trio>=0.23.0",
    "requests>=2.31.0",
    "GitPython>=3.1.0",
    "anthropic>=0.15.0",
    "python-dotenv>=1.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
maven = "cli.main:main"
maven-banner = "cli.banner:main"

[project.urls]
Homepage = "https://motherhaven.app"
Repository = "https://github.com/motherhaven/moha-maven"

[tool.setuptools.packages.find]
include = ["cli*", "maven_mcp*", "database*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.sql"]
